# chat-watchtower

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
exp/: socratic_example.ipynb
prompt_files/: 20240109_Call Center Testing Questions_sample.xlsx  20240109_Call Center Testing Questions_v3-1.xlsx  20240109_Call Center Testing Questions_v3-2.xlsx  20240109_Call Center Testing Questions_v3.xlsx  20240207_Call Center Testing Questions_v4-1.2.xlsx  20240207_Call Center Testing Questions_v4-1.xlsx  20240207_Call Center Testing Questions_v4-2.xlsx  20240207_Call Center Testing Questions_v4.3.xlsx  20240207_Call Center Testing Questions_v4.xlsx  20240207_Call Center Testing Questions_v4_first30.xlsx  20240207_Call Center Testing Questions_v4_soc_test.xlsx  sensitive_questions_prompts.xlsx  test_meta_questions.xlsx  test_sop_questions.xlsx  wt_demo_0208.xlsx
src/: run_tests.py
src/config/: config.yaml
src/utils/: metrics.py  socratic_helpers.py  utils.py
